--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "*.{js,jsx,json,css,scss,md}": [
       "npm run lint",
       "npm run format",
-      "git add"
+      "git add ."
     ]
   },
   "husky": {
